	* src/core/include/istream.h: Update comments
	* src/core/include/scalar.h: Update comments
	* src/core/include/isource.h: Update comments
	* src/core/include/iattributehandler.h: Update comments
	* src/core/include/integerattributehandler.h: Update comments
	* src/core/include/persistentobjectmanager.h: Update comments
	* src/core/include/persistentobject.h: Update comments

2007-08-14  Paf <paf@tuxfamily.org>
	* src/core/include/genericattributehandler.h: Update comments
	* src/core/include/iattribute.h: Update comments

2007-08-13  Paf <paf@tuxfamily.org>
	* src/core/include/basemanager.h: Update comments and implement the save()
	method
	* src/core/include/filestream.h: Update comments

2007-08-11  Paf <paf@tuxfamily.org>
	* src/core/include/attributehandlerregistry.h: Update comments and remove
	the unused libxml++ header

2007-08-09  Paf <paf@tuxfamily.org>
	* src/core/tests/zelda: File added
	* src/core/include/attributehandlerregistry.h: File added
	* src/core/include/integer.h: File added
	* src/core/include/genericattributehandler.h: File added
	* src/core/include/basemanager.h: File added
	* src/core/include/iattributehandler.h: File added
	* src/core/include/integerattributehandler.h: File added
	* src/core/include/persistentobjectmanager.h: File added
	* src/core/src/persistentobjectmanager.cpp: File added
	* src/core/src/attributehandlerregistry.cpp: File added
	* INSTALL: Updated
	* src/core/tests/testpo.cpp: Updated to use the PersistentObjectManager
	* src/core/include/filestream.h: File added
	* src/core/include/sourcefile.h: File added
	* src/core/include/istream.h: File added
	* src/core/include/scalar.h: File added
	* src/core/include/isource.h: File added
	* src/core/include/iattribute.h: File added
	* src/core/include/persistentobject.h: File added
	* src/core/src/sourcefile.cpp: File added
	* src/core/src/persistentobject.cpp: File added
	* src/core/src/filestream.cpp: File added
	* src/core/Makefile: Updated